[tool.poetry]
name = "raggaeton"
version = "0.1.0"
description = "RAG and chat over your documents"
authors = ["Chen Enjiao <erniesg@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
supabase = "^2.5.0"
modal = "^0.62.186"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
