[tool.poetry]
name = "raggaeton"
version = "0.1.0"
description = "RAG and chat over your documents"
authors = ["Chen Enjiao <erniesg@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.25.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
supabase = "^2.5.0"
modal = "^0.62.186"
llama-index = "^0.10.40"
llama-index-readers-database = "^0.1.4"
llama-index-embeddings-huggingface = "^0.2.1"
llama-index-vector-stores-supabase = "^0.1.5"
llama-index-llms-anthropic = "^0.1.11"
deepeval = "^0.21.48"
llama-index-callbacks-deepeval = "^0.1.3"
llama-index-tools-google = "^0.1.5"
arize-phoenix = {extras = ["evals"], version = "^4.2.4"}
llama-index-callbacks-arize-phoenix = "^0.1.5"
llama-index-postprocessor-colbert-rerank = "^0.1.2"
llama-hub = "^0.0.79.post1"
llama-index-packs-ragatouille-retriever = "^0.1.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
